# nature-climate-ai

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
config/: cdsapirc_template.txt  study.yaml
docs/: AI_HANDOFF.md  author_metadata_audit.md  baseline_evaluation.md  blog_codex_assisted_research_zh.md  data_access_plan.md  data_access_template_audit.md  data_account_download_checklist.md  data_checksum_audit.md  data_ethics_and_licensing.md  data_source_access_notes.md  e01_event_catalogue.md  editorial_significance_rationale.md  era5_climate_features.md  evidence_artifact_audit.md  experiment_protocol.md  figure_generation.md  fluxnet_validation.md  gee_shared_grid_reexport_guide.md  journal_and_data_sources.md  known_risks_and_mitigation.md  literature_positioning.md  manuscript_format_audit.md  methods_workflow.md  minimum_publishable_evidence_slice.md  model_interpretability_plan.md  modeling_dataset.md  modis_anomaly_generation.md  modis_download_handover.md  modis_quality_filtering.md  nature_claim_strategy.md  pipeline_execution_log_2026-06-07.md  pipeline_smoke_test.md  placeholder_evidence_map.md  precursor_discovery.md  predictive_validation_summary.md  provider_request_templates.md  public_release_audit.md  readiness_dashboard.md  reference_audit.md  reproducibility_audit.md  (+13 more)
evidence/: artifact_audit.csv  artifact_audit.md  evidence_artifact_audit.md  evidence_artifact_status.csv  registry.yaml
figures/: figure_plan.md
manuscript/: author_metadata.yaml  author_metadata_audit.md  author_metadata_status.csv  chinese_review_notes.md  (+37 more)
(+164 files in other folders)
